SolutionItems/ingress.yml
apiVersion: networking.k8s.io/beta1v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /demo(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: employeeservice-service
          servicePort: 80
      - path: /demoMasterdata(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: masterdataservice-service
          servicePort: 80
